fix
make navbar opaque --> consider transparency or blur, and also horizontal scroll status indicator bar

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
 
 
 .navigation {
+    background-color: var(--bg);
     display: flex;                         /* enable flexbox module */
     top: 0;
     position: fixed;
